--- a/Shop.csproj
+++ b/Shop.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <UserSecretsId>d3d49ea0-c45f-45ab-a1c3-3c8f5e53722c</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
@@ -12,10 +13,15 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="bootstrap" Version="5.0.1" />
     <PackageReference Include="Microsoft.AspNet.Mvc" Version="5.2.7" />
     <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.2.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.5" />
     <PackageReference Include="NuGet.Packaging" Version="5.9.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwroot\imj\" />
   </ItemGroup>
 
 </Project>
