--- a/Shop.csproj
+++ b/Shop.csproj
@@ -21,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\imj\" />
+    <Folder Include="wwwroot\img\" />
   </ItemGroup>
 
 </Project>
