--- a/Shop.csproj
+++ b/Shop.csproj
@@ -16,6 +16,10 @@
     <PackageReference Include="bootstrap" Version="5.0.1" />
     <PackageReference Include="Edmw.ApiInvokerHttpClient" Version="1.0.0" />
     <PackageReference Include="EntityFramework" Version="6.4.4" />
+    <PackageReference Include="JetBrains.ReSharper.CommandLineTools" Version="2021.1.3">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="JSON" Version="1.0.1" />
     <PackageReference Include="Microsoft.AspNet.Mvc" Version="5.2.7" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
